--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %} - FlaskApp</title>
-    <!-- My CSS -->
-    <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
-</head>
-<body>
-    <nav>
-        <a href="{{ url_for('index') }}">FlaskApp</a>
-        <a href="#">About</a>
-    </nav>
-    <hr>
-    <div class="content">
-        {% block content %} {% endblock %}
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %} {% endblock %} - FlaskApp</title>
+        <!-- My CSS -->
+        <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
+    </head>
+    <body>
+        <nav>
+            <a href="{{ url_for('form') }}">From</a>
+            <a href="{{ url_for('stat') }}">Statistics</a>
+        </nav>
+        <hr>
+        <div class="content">
+            {% block content %} {% endblock %}
+        </div>
+    </body>
 </html>
