--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <nav>
-            <a href="{{ url_for('form.html') }}">From</a>
-            <a href="{{ url_for('stat,html') }}">Statistics</a>
+            <a href="{{ url_for('form') }}">From</a>
+            <a href="{{ url_for('stat') }}">Statistics</a>
         </nav>
         <hr>
         <div class="content">
