--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
     </head>
     <body>
-        <nav>
+        <nav style="font-style: oblique; font-size: x-large;">
             <a href="{{ url_for('form') }}">From</a>
             <a href="{{ url_for('stat') }}">Statistics</a>
         </nav>
